--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,8 @@
     -->
     <script src="https://apis.google.com/js/api.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+  <style>
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+</style>
   </body>
 </html>
